--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=greengrocery
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.tomcat.initial-size=5
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
